fix(tooltip): prevent text truncation on tooltip (#5429)
* fix(tooltip): prevent text truncation on tooltip

* fix(tooltip): remove max-width

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -29,7 +29,6 @@
 @mixin tooltip--content($tooltip-type: 'icon') {
   @include box-shadow;
   width: max-content;
-  max-width: rem(208px);
   height: auto;
   padding: if(
     $tooltip-type == 'definition',
